--- a/index.html
+++ b/index.html
@@ -6,14 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landingspage</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="main.js" defer></script>
 </head>
-<body>
+<body id="js--body">
     <header class="header">
-        <h1 class="headerTitle">YABPAN</h1>
-        <button class="headerButton">menu</button>
+        <h1 class="headerTitle">MOUNT FUJI</h1>
+        <button id="js--menu" class="headerButton">menu</button>
     </header>
-</body>
+    <nav id="js--nav" class="mainNavigation">
+            <ul class="mainNavigationList">
+                <li class="mainNavigationListItem">
+                    <a href="">Home</a>
+                </li>
+                <li class="mainNavigationListItem">
+                    <a href="">collection #1</a>
+                </li>
+                <li class="mainNavigationListItem">
+                    <a href="">collection #2</a>
+                </li>
+                <li class="mainNavigationListItem">
+                    <a href="">collection #3</a>
+                </li>
+        </ul>
+    </nav>
     <figure class="bigFigure">
         <img src="img/Fuji2.jpg" alt="mount fuji">
     </figure>
+    <section class="collections">
+        <h2 class="collectionsTitle">collections</h2>
+        <ul class="collectionslist">
+            <li class="collectionslistitem">
+                <img src="img/fuji3.jpg" alt="fuji visible from a town">
+            </li>
+            <li class="collectionslistitem">
+                <img src="img/fuji4.jpg" alt="fuji in comparison to a city">
+            </li>
+            <li class="collectionslistitem">
+                <img src="img/fuji5.jpg" alt="fuji with water">
+            </li>
+            <li class="collectionslistitem">
+                <img src="img/fuji6.jpg" alt="fuji with a view of a town">
+            </li>
+            <li class="collectionslistitem">
+                <img src="img/fuji7.jpg" alt="fuji trough the bushes">
+            </li>
+            <li class="collectionslistitem">
+                <img src="img/fuji8.jpg" alt="fuji from above">
+            </li>
+        </ul>
+    </section>
+    <section class="info">
+        <div class="block">
+        <h2 class="infoTitle">what</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ligula purus, bibendum ac pretium nec, placerat vitae tortor. Donec viverra dui in finibus rhoncus. Aliquam pulvinar libero enim, sed pellentesque arcu pharetra at. Pellentesque vitae mauris nunc. Phasellus nisl nisi, tristique eget velit id, sodales egestas est. Donec suscipit lorem eget est consectetur, a fringilla purus interdum. Morbi eu gravida lectus. Pellentesque mauris enim, vulputate nec mattis ut, mattis in lectus. Suspendisse euismod, turpis vel placerat facilisis, justo magna porttitor justo, ac interdum nibh ante porttitor sapien. Donec condimentum lectus nisl, vitae facilisis tellus mattis ac. Fusce magna purus, tristique semper aliquam in, pharetra et ipsum. Praesent sed sodales risus. Vivamus non malesuada sem, ut facilisis nisi. Praesent eu ornare elit, eget lacinia eros. Aliquam sit amet sollicitudin urna, at eleifend neque. Sed ultricies ligula eu neque cursus, nec convallis elit imperdiet. Donec dapibus at tellus ut lobortis. Pellentesque imperdiet elit est, finibus tincidunt neque efficitur vitae. Mauris laoreet, quam eu rutrum tincidunt, mi magna sodales erat, nec condimentum elit nunc eu risus.
+            Aliquam egestas posuere sem. Curabitur lacinia facilisis leo, in porttitor augue posuere in. Sed in ullamcorper mauris. Pellentesque quis consectetur neque, non faucibus purus. Ut sed ex est. Donec purus lacus, iaculis a lacus id, molestie pulvinar orci. Suspendisse consequat egestas magna, in convallis elit consectetur bibendum.</p>
+        </div>
+        <div class="block">
+        <h2 class="infoTitle">why</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ligula purus, bibendum ac pretium nec, placerat vitae tortor. Donec viverra dui in finibus rhoncus. Aliquam pulvinar libero enim, sed pellentesque arcu pharetra at. Pellentesque vitae mauris nunc. Phasellus nisl nisi, tristique eget velit id, sodales egestas est. Donec suscipit lorem eget est consectetur, a fringilla purus interdum. Morbi eu gravida lectus. Pellentesque mauris enim, vulputate nec mattis ut, mattis in lectus. Suspendisse euismod, turpis vel placerat facilisis, justo magna porttitor justo, ac interdum nibh ante porttitor sapien. Donec condimentum lectus nisl, vitae facilisis tellus mattis ac. Fusce magna purus, tristique semper aliquam in, pharetra et ipsum. Praesent sed sodales risus. Vivamus non malesuada sem, ut facilisis nisi. Praesent eu ornare elit, eget lacinia eros. Aliquam sit amet sollicitudin urna, at eleifend neque. Sed ultricies ligula eu neque cursus, nec convallis elit imperdiet. Donec dapibus at tellus ut lobortis. Pellentesque imperdiet elit est, finibus tincidunt neque efficitur vitae. Mauris laoreet, quam eu rutrum tincidunt, mi magna sodales erat, nec condimentum elit nunc eu risus.
+            Aliquam egestas posuere sem. Curabitur lacinia facilisis leo, in porttitor augue posuere in. Sed in ullamcorper mauris. Pellentesque quis consectetur neque, non faucibus purus. Ut sed ex est. Donec purus lacus, iaculis a lacus id, molestie pulvinar orci. Suspendisse consequat egestas magna, in convallis elit consectetur bibendum.</p>
+        </div>
+    </section>
+    <footer>
+        <h2 class="footerClass">gemaakt door de heer Gleijsteen</h2>
+    </footer>
+</body>
 </html>
